--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -1,10 +1,11 @@
 doctype html
-html(lang="en")
+html.h-100(lang="en")
   head
     title= Title
+    // script(src=assetPath('main.css'))
     script.
       var gon = !{JSON.stringify(gon)};
-  body
+  body.d-flex.flex-column.h-100
     nav.navbar.navbar-expand-lg.navbar-light.bg-faded
       a.navbar-brand(href="/") Chat
       button.navbar-toggler(data-toggle="collapse" data-target="#navbarSupportedContent")
@@ -13,7 +14,7 @@ html(lang="en")
         ul.navbar-nav.mr-auto
           li.nav-item.active
             a.nav-link(href="/") Home
-    .container
-      #chat
+    .container.h-100.overflow-hidden
+      .h-100#chat
       // block content
-    script(src='/assets/application.js')
+    script(src=assetPath('application.js'))
